--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://boomsterio.github.io/MyReact",
+  "homepage": "https://boomsterio.github.io/MyReact/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
