--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://boomsterio.github.io/MyReact/",
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -12,13 +13,19 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-form": "^8.3.1",
+    "antd": "^4.10.2",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "craco-less": "^1.17.1",
+    "formik": "^2.2.6",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paginate": "^7.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -27,6 +34,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "^4.1.3",
+    "use-query-params": "^1.1.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
