--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://boomsterio.github.io/MyReact/",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@craco/craco": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -22,6 +23,7 @@
     "classnames": "^2.2.6",
     "craco-less": "^1.17.1",
     "formik": "^2.2.6",
+    "formik-antd": "^2.0.1",
     "formik-redux": "^2.0.0",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
