--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-form": "^8.3.1",
+    "@types/uuid": "^8.3.0",
     "antd": "^4.10.2",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
@@ -38,6 +39,7 @@
     "reselect": "^4.0.0",
     "typescript": "^4.1.3",
     "use-query-params": "^1.1.9",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
